[gd_scene load_steps=4 format=3 uid="uid://bcu6c0l8n7i4a"]

[ext_resource type="Script" path="res://scripts/credits.gd" id="1_5v65k"]
[ext_resource type="LabelSettings" uid="uid://cfnklpbe13q43" path="res://other/button.tres" id="1_axnk7"]

[sub_resource type="LabelSettings" id="LabelSettings_vku3m"]
font_size = 19
font_color = Color(0, 0, 0, 1)

[node name="Credits" type="Node2D"]
script = ExtResource("1_5v65k")

[node name="Outline" type="ColorRect" parent="."]
z_index = 2
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(20.186, 11.0233)
mouse_filter = 1
color = Color(0, 0, 0, 1)

[node name="Inline" type="ColorRect" parent="."]
z_index = 2
offset_left = 10.0
offset_top = 10.0
offset_right = 49.0
offset_bottom = 48.0
scale = Vector2(20.186, 11.0233)
mouse_filter = 2

[node name="ExitButton" type="Button" parent="."]
z_index = 2
offset_left = 12.0
offset_top = 11.0
offset_right = 20.0
offset_bottom = 19.0
text = "
                                "
flat = true

[node name="ColorRect" type="ColorRect" parent="ExitButton"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(3.56, 1.36)
mouse_filter = 2
color = Color(0.5, 0.5, 0.5, 1)

[node name="Label" type="Label" parent="ExitButton"]
layout_mode = 0
offset_left = 11.0
offset_top = -7.0
offset_right = 114.0
offset_bottom = 62.0
text = "EXIT"
label_settings = ExtResource("1_axnk7")

[node name="Label" type="Label" parent="."]
z_index = 2
offset_left = 11.0
offset_top = 66.0
offset_right = 51.0
offset_bottom = 89.0
text = "- - Credits - -
Title Music- https://pixabay.com/music/modern-
classical-inspirational-uplifting-calm-piano-254764/

Home Music-https://pixabay.com/music/modern-classical-
happy-good-morning-piano-music-272718/

Battle Music-https://pixabay.com/music/main-title-epic-battle-
francisco-samuel-123469/

Sound effects- pixabay"
label_settings = SubResource("LabelSettings_vku3m")

[node name="WickedLazyFix" type="ColorRect" parent="."]
offset_left = -105.0
offset_top = 71.0
offset_right = -65.0
offset_bottom = 111.0
scale = Vector2(13.54, 9.0985)
mouse_filter = 1
color = Color(1, 1, 1, 0)

[connection signal="mouse_entered" from="ExitButton" to="." method="_on_exit_button_mouse_entered"]
[connection signal="mouse_exited" from="ExitButton" to="." method="_on_exit_button_mouse_exited"]
[connection signal="pressed" from="ExitButton" to="." method="_on_exit_button_pressed"]
